      Horowitz.
    - Make the OK button the default widget in the create and edit partition
      dialogs.
  * Remove d-i/source/console-setup/Keyboard/MyKeyboardNames.pl on clean.
  * Only run gnome-settings-daemon if it exists, removing dependency on
    gnome-control-center (LP: #147852).
  * Add advanced button text to translation template (LP: #147612).

  [ Mario Limonciello ]
  * Actually install xmltv from on-cd repo if checked.
  * Correct minor typo for nvidia xorg generation.
  * Explicitly remove via drivers before trying to install openchrome.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 15:25:34 -0400

ubiquity (1.6.0) gutsy; urgency=low

  [ Mario Limonciello ]
  * Add support for all 3 different nvidia drivers.
  * Add initial support for xmltv during installation.
  * Update debconf text for myth_button & mythweb.
  * Explicity install libvia* with openchrome install.
  * Setup autologin for new Xfce based approach.

  [ Colin Watson ]
  * Update translations from Rosetta.
  * Set Maintainer to ubuntu-installer@lists.ubuntu.com and put Evan and
    myself in Uploaders.

  [ Evan Dandrea ]
  * Slight improvement for automating migration-assistant.
  * Add preseed hooks for rebooting, install failure, and install
    success.
  * Automatic update of included source packages: hw-detect 1.53ubuntu3,
    kboot-installer 0.0.1ubuntu5, partman-base 107ubuntu4, partman-
    basicfilesystems 54ubuntu4, user-setup 1.14ubuntu3, yaboot-installer
    1.1.11ubuntu2.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 28 Sep 2007 11:53:06 -0400

ubiquity (1.5.18) gutsy; urgency=low

  [ Mario Limonciello ]
  * Fix minor typo in apply-drivers.

  [ Colin Watson ]
  * GTK frontend:
    - Make release notes button work again (LP: #138365).

  [ Evan Dandrea ]
  * Fix typo in realpath_recurse (LP: #144460).
  * Automatic update of included source packages: base-installer
    1.81ubuntu3, console-setup 1.16ubuntu5.
