@@ -567,8 +567,7 @@ class Wizard(BaseFrontend):
             self.set_current_page(WIDGET_STACK_STEPS["stepUserInfo"])
         elif n == 'Summary':
             self.set_current_page(WIDGET_STACK_STEPS["stepReady"])
-            installText = self.get_string("live_installer")
-            self.userinterface.next.setText(installText)
+            self.userinterface.next.setText(self.get_string('install_button'))
         else:
             print >>sys.stderr, 'No page found for %s' % n
             return
